--- a/index.html
+++ b/index.html
@@ -8,35 +8,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/images/image1.png" type="image/x-icon">
 </head>
 
 <body>
-
-
     <header class="position-relative overflow-hidden">
         <nav class="nav-bar position-fixed py-19">
             <div class="container w-100">
                 <div class="d-flex justify-content-between">
                     <div class=" d-flex gap-md-63 ">
                         <div class="gap-md-25 gap-10 align-items-center d-flex ml-60-lg">
-                            <div>
-                                <div class="menubar z-3">
-                                    <span class="centr"></span>
-                                    <span class="left"></span>
-                                    <span class="left-1"></span>
-                                </div>
+                            <div class="menubar z-3">
+                                <span class="centr"></span>
+                                <span class="left"></span>
+                                <span class="left-1"></span>
                             </div>
                             <div class="w-md-60 w-32">
                                 <img class="w-100" src="./assets/images/image1.png" alt="no-image">
                             </div>
-                            <p class="nf-se">NFTsee</p>
+                            <p class="nf-se mb-0">NFTsee</p>
                         </div>
                         <div class="gap-59 align-items-center gap-sm-5 d-flex nav-itm menulist">
-                            <a href="#">
-                                <p class="fed-walet">Feed</p>
+                            <a href="#" class="text-decoration-none">
+                                <p class="fed-walet mb-0">Feed</p>
                             </a>
-                            <a href="#">
-                                <p class="fed-walet">Wallets</p>
+                            <a href="#" class="text-decoration-none">
+                                <p class="fed-walet mb-0">Wallets</p>
                             </a>
                         </div>
                     </div>
@@ -68,19 +65,21 @@
             <div class="card mt-12">
                 <div class="d-flex position-relative">
                     <div class="d-flex gap-47 flex-column flex-md-row mt-20">
-                        <div><img src="./assets/images/Ellipse-13.png" alt=""></div>
-                        <div>
+                        <div class="image">
+                            <img src="./assets/images/Ellipse-13.png" alt="no-image">
+                        </div>
+                        <div class="Lorem-12">
                             <h1 class="lorem-moll">Lorem Mollis</h1>
                             <p class="lorem-mol">@loremmollis</p>
                             <div class="d-flex pt-34 w-100">
                                 <div class="border-right w-33 d-flex justify-content-start">
-                                    <div>
+                                    <div class="name-number">
                                         <p class="fol-156">156</p>
                                         <p class="folowing">Following</p>
                                     </div>
                                 </div>
                                 <div class="border-right w-33 d-flex justify-content-center ">
-                                    <div>
+                                    <div class="name-number">
                                         <p class="fol-156">457</p>
                                         <p class="folowing">Followers</p>
                                     </div>
@@ -92,7 +91,7 @@
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="profile-button">
                         <button class="Edit-profile position-absolute">Edit Profile</button>
                     </div>
                 </div>
